--- a/rdexpense-manager/pom.xml
+++ b/rdexpense-manager/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>rdexpense-manager</name>
-	<description>系统</description>
+	<description>研发费用辅助管理系统</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -257,11 +257,7 @@
 			<artifactId>netty-all</artifactId>
 			<version>4.1.42.Final</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.security.oauth</groupId>
-			<artifactId>spring-security-oauth2</artifactId>
-			<version>2.3.4.RELEASE</version>
-		</dependency>
+
 	</dependencies>
 
 	<build>
