--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.0",
+    "file-saver": "^2.0.2",
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
@@ -17,7 +18,8 @@
     "vue-ls": "^3.2.1",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "xlsx": "^0.16.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
