--- a/rdexpense-manager/src/main/resources/application-test.properties
+++ b/rdexpense-manager/src/main/resources/application-test.properties
@@ -2,7 +2,7 @@
 lock.time.out=5
 
 #AWS的region
-aws.s3.region=https://minio.rdexpense.com
+aws.s3.region=https://minio.ocloudware.com
 #AWS的access_key
 aws.access_key_id=ocloud_access_key
 #AWS的secret_key
