--- a/rdexpense-manager/pom.xml
+++ b/rdexpense-manager/pom.xml
@@ -42,6 +42,12 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional> <!-- 可选 -->
+		</dependency>
+
 
 <!--		<dependency>-->
 <!--			<groupId>commons-logging</groupId>-->
